lib_LTLIBRARIES=libcgrapher4gcc.la
libcgrapher4gcc_la_SOURCES=\
	activity_graph_dumper.cpp\
	activity_graph_dumper.h\
	arith_expr.cpp\
	arith_expr.h\
	array_ref.cpp\
	array_ref.h\
	asm_expr.cpp\
	asm_expr.h\
	autoscan-2.69.log\
	bad_tree_exception.cpp\
	bad_tree_exception.h\
	bind_expr.cpp\
	bind_expr.h\
	call_expr.cpp\
	call_expr.h\
	case_label_expr.cpp\
	case_label_expr.h\
	component_ref.cpp\
	component_ref.h\
	compound_expr.cpp\
	compound_expr.h\
	cond_expr.cpp\
	cond_expr.h\
	debug.h\
	decl_expr.cpp\
	decl_expr.h\
	dumper.h\
	expr_factory.cpp\
	expr_factory.h\
	expression.cpp\
	expression.h\
	goto_expr.cpp\
	goto_expr.h\
	identifier.cpp\
	identifier.h\
	indirection.cpp\
	indirection.h\
	integer_cst.cpp\
	integer_cst.h\
	label.cpp\
	label.h\
	label_expr.cpp\
	label_expr.h\
	leaf.cpp\
	leaf.h\
	modify_expr.cpp\
	modify_expr.h\
	cgrapher4gcc.cpp\
	cgrapher4gcc.h\
	negate_op.cpp\
	negate_op.h\
	nop_expr.cpp\
	nop_expr.h\
	postdecrement_expr.cpp\
	postdecrement_expr.h\
	postincrement_expr.cpp\
	postincrement_expr.h\
	predecrement_expr.cpp\
	predecrement_expr.h\
	preincrement_expr.cpp\
	preincrement_expr.h\
	return_expr.cpp\
	return_expr.h\
	stmt_list.cpp\
	stmt_list.h\
	string_cst.cpp\
	string_cst.h\
	switch_expr.cpp\
	switch_expr.h\
	ternary_op.cpp\
	ternary_op.h\
	test.h\
	text_dumper.cpp\
	text_dumper.h\
	value.cpp\
	value.h\
	value_factory.cpp\
	value_factory.h
libcgrapher4gcc_la_CXXFLAGS = -std=c++11
libcgrapher4gcc_la_LDFLAGS  = -version-info 0:0:0

