lib_LTLIBRARIES=libactivity_graph.la
libactivity_graph_la_SOURCES=\
	action_identifier.h\
	activity_graph.cpp\
	activity_graph.h\
	activity_graph_internals.h\
	edge.h\
	end_of_activity_identifier.h\
	end_of_flow_identifier.h\
	ending_node_identifier.h\
	flow_identifier.h\
	fork_identifier.h\
	identifier.h\
	init_identifier.h\
	merge_identifier.h\
	node.cpp\
	node.h\
	object_identifier.h\
	sync_identifier.h\
	types.h
libactivity_graph_la_CPPFLAGS = $(BOOST_CPPFLAGS)
libactivity_graph_la_CXXFLAGS = -std=c++11
libactivity_graph_la_LDFLAGS = -version-info 0:2:0
pkginclude_HEADERS =\
	action_identifier.h\
	activity_graph.h\
	end_of_activity_identifier.h\
	end_of_flow_identifier.h\
	ending_node_identifier.h\
	flow_identifier.h\
	fork_identifier.h\
	identifier.h\
	init_identifier.h\
	merge_identifier.h\
	object_identifier.h\
	sync_identifier.h
