lib_LTLIBRARIES=libactivity_diagram.la
libactivity_diagram_la_SOURCES=\
	action_identifier.h\
	activity_graph.cpp\
	activity_graph.h\
	activity_graph_internals.h\
	edge.h\
	end_of_activity_identifier.h\
	end_of_flow_identifier.h\
	ending_node_identifier.h\
	flow_identifier.h\
	fork_identifier.h\
	identifier.h\
	init_identifier.h\
	merge_identifier.h\
	node.cpp\
	node.h\
	object_identifier.h\
	sync_identifier.h\
	types.h\
	attribute.h\
	attribute.cpp\
	property_writer.h\
	shape.h
libactivity_diagram_la_CPPFLAGS = $(BOOST_CPPFLAGS)
libactivity_diagram_la_CXXFLAGS = -std=c++11
libactivity_diagram_la_LDFLAGS = -version-info 5:1:0
pkginclude_HEADERS =\
	action_identifier.h\
	activity_graph.h\
	end_of_activity_identifier.h\
	end_of_flow_identifier.h\
	ending_node_identifier.h\
	flow_identifier.h\
	fork_identifier.h\
	identifier.h\
	init_identifier.h\
	merge_identifier.h\
	object_identifier.h\
	sync_identifier.h\
	shape.h
